--- a/index.html
+++ b/index.html
@@ -5,9 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet"> 
+    <title>MoGo</title>
 </head>
 <body>
-
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a href="/" type="button" class="logo">MoGo</a>
+                <nav class="topnav">
+                    <a href="#" class="topnav__link active">About</a>
+                    <a href="#" class="topnav__link">Service</a>
+                    <a href="#" class="topnav__link">Work</a>
+                    <a href="#" class="topnav__link">Blog</a>
+                    <a href="#" class="topnav__link">Contact</a>
+                </nav>                
+            </div>
+        </div>
+    </header>
+    <section class="intro">
+        <div class="container">
+            <div class="intro__inner">
+                <h2 class="intro__suptitle">Creative Template</h2>
+                <h1 class="intro__title">Welcome to MoGo</h1>
+                <button class="intro__button">Learn more</button>
+            </div>
+        </div>
+        <div class="slider">
+            <div class="container">
+                <div class="slider__inner">
+                    <div class="slider__item"><span>01</span> Intro</div>
+                    <div class="slider__item"><span>02</span> Work</div>
+                    <div class="slider__item"><span>03</span> About</div>
+                    <div class="slider__item"><span>04</span> Contact</div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
