добавил секции about и funnum

--- a/index.html
+++ b/index.html
@@ -43,5 +43,74 @@
             </div>
         </div>
     </section>
+    <section class="section">
+        <div class="container">
+            <div class="section__header">
+                <h2 class="section__suptitle">What we do</h2>
+                <h1 class="section__title">Story about us</h1>
+                <p class="header__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore 
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                    exercitation ullamco laboris nisi ut aliquip ex ea 
+                    commodo consequat. 
+                </p>
+            </div>
+            <div class="about">
+                <div class="about__item">
+                    <div class="about__image">
+                        <img src="./assets/img/about/1.jpg" alt="">
+                        <div class="about__text">super team</div>
+                    </div>
+                </div>
+                <div class="about__item">
+                    <div class="about__image">
+                        <img src="./assets/img/about/2.jpg" alt="">
+                        <div class="about__text">super team</div>
+                    </div>
+                </div>
+                <div class="about__item">
+                    <div class="about__image">
+                        <img src="./assets/img/about/3.jpg" alt="">
+                        <div class="about__text">super team</div>
+                    </div>
+                </div>                                
+            </div>
+        </div>
+    </section>
+    <div class="funnum">
+        <div class="container">
+            <div class="funnum__inner">
+                <div class="funnum__item">
+                    <div class="funnum__num">42</div>
+                    <div class="funnum__text">Web Design Projects</div>
+                </div>
+                <div class="funnum__item">
+                    <div class="funnum__num">123</div>
+                    <div class="funnum__text">happy client</div>
+                </div>
+                <div class="funnum__item">
+                    <div class="funnum__num">15</div>
+                    <div class="funnum__text">award winner</div>
+                </div>
+                <div class="funnum__item">
+                    <div class="funnum__num">99</div>
+                    <div class="funnum__text">cup of coffee</div>
+                </div>
+                <div class="funnum__item">
+                    <div class="funnum__num">24</div>
+                    <div class="funnum__text">members</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="section">
+        <div class="container">
+            <div class="section__header">
+                <h2 class="section__suptitle">We work with</h2>
+                <h1 class="section__title">Amazing Services</h1>                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
