Добавил секцию сервисы

--- a/index.html
+++ b/index.html
@@ -110,6 +110,58 @@
                 <h2 class="section__suptitle">We work with</h2>
                 <h1 class="section__title">Amazing Services</h1>                
             </div>
+            <div class="services line">
+                <div class="services__item">
+                    <img src="./assets/img/service/1.png" alt="" class="services__icon">
+                    <h3 class="services__title">Photography</h3>
+                    <p class="services__text">
+                        Lorem ipsum dolor sit amet, consectetur 
+                        adipiscing elit, sed do eiusmod tempor.
+                    </p>
+                </div>
+                <div class="services__item">
+                    <img src="./assets/img/service/2.png" alt="" class="services__icon">
+                    <h3 class="services__title">Web Design</h3>
+                    <p class="services__text">
+                        Ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor.
+                    </p>
+                </div>
+                <div class="services__item">
+                    <img src="./assets/img/service/3.png" alt="" class="services__icon">
+                    <h3 class="services__title">Creativity</h3>
+                    <p class="services__text">
+                        Dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor.
+                    </p>
+                </div>                                
+            </div>
+            <div class="services">
+                <div class="services__item">
+                    <img src="./assets/img/service/4.png" alt="" class="services__icon">
+                    <h3 class="services__title">Seo</h3>
+                    <p class="services__text">
+                        Lorem ipsum dolor sit amet, consectetur 
+                        adipiscing elit, sed do eiusmod tempor.
+                    </p>
+                </div>
+                <div class="services__item">
+                    <img src="./assets/img/service/5.png" alt="" class="services__icon">
+                    <h3 class="services__title">Css/Html</h3>
+                    <p class="services__text">
+                        Ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor.
+                    </p>
+                </div>
+                <div class="services__item">
+                    <img src="./assets/img/service/6.png" alt="" class="services__icon">
+                    <h3 class="services__title">digital</h3>
+                    <p class="services__text">
+                        Dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor.
+                    </p>
+                </div>                                
+            </div>            
         </div>
     </section>
 </body>
