добавил секцию devices

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h2 class="section__suptitle">We work with</h2>
                 <h1 class="section__title">Amazing Services</h1>                
             </div>
-            <div class="services line">
+            <div class="services services--line">
                 <div class="services__item">
                     <img src="./assets/img/service/1.png" alt="" class="services__icon">
                     <h3 class="services__title">Photography</h3>
@@ -162,6 +162,18 @@
                     </p>
                 </div>                                
             </div>            
+        </div><!-- /container -->
+    </section>
+    <section class="section section--devices">
+        <div class="container">
+            <div class="section__header">
+                <h2 class="section__suptitle">For all devices</h2>
+                <h1 class="section__title">Unique design</h1>                
+            </div>
+            <div class="devices">
+                <img src="./assets/img/feature/ipad.png" alt="" class="devices__item">
+                <img src="./assets/img/feature/iphone.png" alt="" class="devices__item devices__item--iphone">
+            </div>
         </div>
     </section>
 </body>
