Добавил секции whatwedo и mention

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <a href="/" type="button" class="logo">MoGo</a>
+                <a href="/" class="logo">MoGo</a>
                 <nav class="topnav">
                     <a href="#" class="topnav__link active">About</a>
                     <a href="#" class="topnav__link">Service</a>
@@ -48,7 +48,7 @@
             <div class="section__header">
                 <h2 class="section__suptitle">What we do</h2>
                 <h1 class="section__title">Story about us</h1>
-                <p class="header__text">
+                <p class="section__text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore 
                     magna aliqua. Ut enim ad minim veniam, quis nostrud 
@@ -176,5 +176,97 @@
             </div>
         </div>
     </section>
+    <section class="section">
+        <div class="container">
+            <div class="section__header">
+                <h2 class="section__suptitle">Service</h2>
+                <h1 class="section__title">What we do</h1> 
+                <p class="section__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore 
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                    exercitation ullamco laboris nisi ut aliquip ex ea 
+                    commodo consequat. 
+                </p>                               
+            </div> 
+            <div class="whatwedo">
+                <div class="whatwedo__item">
+                    <img src="./assets/img/service_2/photo.jpg" alt="" class="whatwedo__photo">
+                </div>
+                <div class="whatwedo__item">
+                    <div class="accordion">
+                        <details class="accordion__item" open="">
+                            <summary class="accordion__title">
+                                <img src="./assets/img/service_2/1.png" alt="" class="accordion__icon">
+                                <span class="unselectable">Photography</span>
+                            </summary>
+                            <div class="accordion__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore 
+                                    magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                                    consequat. Duis aute irure dolor in reprehenderit in 
+                                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                    Excepteur sint occaecat cupidatat non proident, 
+                                    sunt in culpa qui officia deserunt mollit anim id est 
+                                    laborum.
+                                </p>
+                            </div>
+                        </details>
+                        <details class="accordion__item">
+                            <summary class="accordion__title">
+                                <img src="./assets/img/service_2/2.png" alt="" class="accordion__icon">
+                                <span class="unselectable">Creativity</span>
+                            </summary>
+                            <div class="accordion__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore 
+                                    magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                                    consequat. Duis aute irure dolor in reprehenderit in 
+                                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                    Excepteur sint occaecat cupidatat non proident, 
+                                    sunt in culpa qui officia deserunt mollit anim id est 
+                                    laborum.
+                                </p>
+                            </div>
+                        </details>
+                        <details class="accordion__item">
+                            <summary class="accordion__title">
+                                <img src="./assets/img/service_2/3.png" alt="" class="accordion__icon">
+                                <span class="unselectable">Web design</span>
+                            </summary>
+                            <div class="accordion__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore 
+                                    magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                                    consequat. Duis aute irure dolor in reprehenderit in 
+                                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                    Excepteur sint occaecat cupidatat non proident, 
+                                    sunt in culpa qui officia deserunt mollit anim id est 
+                                    laborum.
+                                </p>
+                            </div>
+                        </details>                                                
+                    </div><!-- /accordion -->
+                </div><!-- /whatwedo__item -->
+            </div><!-- /whatwedo -->          
+        </div><!-- /container -->
+    </section>
+    <div class="section section--gray">
+        <div class="container">
+            <div class="mention">
+                <img src="./assets/img/mention/1.png" alt="" class="mention_icon">
+                <div class="mention__content">
+                    <p class="mention__text">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+                    <p class="mention__autor">Jon Doe</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
