добавил секции works, reviews, clients

--- a/index.html
+++ b/index.html
@@ -502,5 +502,131 @@
             </div>
         </div>
     </section>
+    <section class="section">
+        <div class="container">
+            <div class="section__header">
+                <h2 class="section__suptitle">What we do</h2>
+                <h1 class="section__title">Some of our work</h1> 
+                <p class="section__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore 
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                    exercitation ullamco laboris nisi ut aliquip ex ea 
+                    commodo consequat. 
+                </p>                               
+            </div>            
+        </div>
+        <div class="works">
+            <div class="works__col">
+                <div class="works__item">
+                    <img src="./assets/img/works/1.jpg" alt="" class="works__img">
+                    <div class="works__content">
+                        <img src="./assets/img/works/icon.png" alt="" class="works__icon">
+                        <div class="works__name">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+                <div class="works__item">
+                    <img src="./assets/img/works/2.jpg" alt="" class="works__img">
+                    <div class="works__content">
+                        <img src="./assets/img/works/icon.png" alt="" class="works__icon">
+                        <div class="works__name">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>                
+            </div>
+            <div class="works__col">
+                <div class="works__item">
+                    <img src="./assets/img/works/3.jpg" alt="" class="works__img">
+                    <div class="works__content">
+                        <img src="./assets/img/works/icon.png" alt="" class="works__icon">
+                        <div class="works__name">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+                <div class="works__item">
+                    <img src="./assets/img/works/4.jpg" alt="" class="works__img">
+                    <div class="works__content">
+                        <img src="./assets/img/works/icon.png" alt="" class="works__icon">
+                        <div class="works__name">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>                  
+            </div>
+            <div class="works__col">
+                <div class="works__item">
+                    <img src="./assets/img/works/5.jpg" alt="" class="works__img">
+                    <div class="works__content">
+                        <img src="./assets/img/works/icon.png" alt="" class="works__icon">
+                        <div class="works__name">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>                   
+            </div>
+            <div class="works__col">
+                <div class="works__item">
+                    <img src="./assets/img/works/6.jpg" alt="" class="works__img">
+                    <div class="works__content">
+                        <img src="./assets/img/works/icon.png" alt="" class="works__icon">
+                        <div class="works__name">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>   
+                <div class="works__item">
+                    <img src="./assets/img/works/7.jpg" alt="" class="works__img">
+                    <div class="works__content">
+                        <img src="./assets/img/works/icon.png" alt="" class="works__icon">
+                        <div class="works__name">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>                                   
+            </div>
+        </div><!-- /works -->
+    </section>
+    <div class="section section--review">
+        <div class="container">
+            <div class="mention">
+                <img src="./assets/img/review/photo_1.png" alt="" class="mention_icon">
+                <div class="mention__content">
+                    <p class="mention__text">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+                    <p class="mention__autor">Joshua Earle</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="section section--clients">      
+        <div class="container">
+            <div class="section__header">
+                <h2 class="section__suptitle">Happy Clients</h2>
+                <h1 class="section__title">What people say</h1>                              
+            </div>
+            <div class="clients">
+                <div class="clients__item">
+                    <img src="./assets/img/clients/1.png" alt="" class="clients__photo">
+                    <div class="clients__name">Matthew Dix</div>
+                    <div class="clients__post">Graphic Design</div>
+                    <div class="clients__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
+                </div>
+                <div class="clients__item">
+                    <img src="./assets/img/clients/2.png" alt="" class="clients__photo">
+                    <div class="clients__name">Nick Karvounis</div>
+                    <div class="clients__post">Graphic Design</div>
+                    <div class="clients__text">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+                </div>
+                <div class="clients__item">
+                    <img src="./assets/img/clients/3.png" alt="" class="clients__photo">
+                    <div class="clients__name">Jaelynn Castillo</div>
+                    <div class="clients__post">Graphic Design</div>
+                    <div class="clients__text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+                </div>
+                <div class="clients__item">
+                    <img src="./assets/img/clients/4.png" alt="" class="clients__photo">
+                    <div class="clients__name">Mike Petrucci</div>
+                    <div class="clients__post">Graphic Design</div>
+                    <div class="clients__text">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
+                </div>
+            </div>              
+        </div>
+    </section>
 </body>
 </html>
