Добавил секции blog, map и footer

--- a/index.html
+++ b/index.html
@@ -628,5 +628,163 @@
             </div>              
         </div>
     </section>
+    <section class="section">
+        <div class="container">
+            <div class="section__header">
+                <h2 class="section__suptitle">Our stories</h2>
+                <h1 class="section__title">Latest blog</h1>                               
+            </div>
+            <div class="blog">
+                <div class="blog__item">
+                    <div class="blog__preview">
+                        <a href="#">
+                            <img src="./assets/img/blog/1.jpg" alt="" class="blog__img">
+                        </a>
+                        <div class="blog__date">
+                            <span>15</span>    
+                            Jan
+                        </div>
+                    </div>
+                    <div class="blog__content">
+                        <a href="" class="blog__title">Lorem ipsum dolor sit amet</a>
+                        <p class="blog__brief">
+                            Consectetur adipiscing elit, sed do eiusmod 
+                            tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                    </div>
+                    <div class="blog__stat">
+                        <span class="blog__views">542</span>
+                        <span class="blog__comments">17</span>
+                    </div>
+                </div>
+                <div class="blog__item">
+                    <div class="blog__preview">
+                        <a href="#">
+                            <img src="./assets/img/blog/2.jpg" alt="" class="blog__img">
+                        </a>
+                        <div class="blog__date">
+                            <span>14</span>    
+                            Jan
+                        </div>
+                    </div>
+                    <div class="blog__content">
+                        <a href="" class="blog__title">Sed do eiusmod tempor</a>
+                        <p class="blog__brief">
+                            Adipiscing elit, sed do eiusmod tempor incididunt 
+                            ut labore et dolore magna aliqua.
+                        </p>
+                    </div>
+                    <div class="blog__stat">
+                        <span class="blog__views">992</span>
+                        <span class="blog__comments">42</span>
+                    </div>
+                </div>
+                <div class="blog__item">
+                    <div class="blog__preview">
+                        <a href="#">
+                            <img src="./assets/img/blog/3.jpg" alt="" class="blog__img">
+                        </a>
+                        <div class="blog__date">
+                            <span>12</span>    
+                            Jan
+                        </div>
+                    </div>
+                    <div class="blog__content">
+                        <a href="" class="blog__title">Incididunt ut labore et dolore</a>
+                        <p class="blog__brief">
+                            Elit, sed do eiusmod tempor incididunt ut labore 
+                            et dolore magna aliqua.
+                        </p>
+                    </div>
+                    <div class="blog__stat">
+                        <span class="blog__views">156</span>
+                        <span class="blog__comments">98</span>
+                    </div>
+                </div>                                
+            </div> <!-- /blog -->     
+        </div> <!-- /container -->
+    </section>
+    <div class="section section--map">
+        <a href="https://goo.gl/maps/USTAoBmQ8FDCztW89" target="_blank" class="maplink">Open map</a>
+    </div>
+    <footer class="section section--footer">
+        <div class="container">
+            <div class="footer">
+                <div class="mogo">
+                    <h1 class="mogo__title">MoGo</h1>
+                    <p class="mogo__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                        enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                        nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                    <div class="follow">
+                        <div class="follow__folowers"><span>15k </span>followers</div>
+                        <div class="follow__icons">
+                            <span>Follow Us:</span>
+                            <a href="#" target="_blank"><img src="./assets/img/footer/facebook.png" alt=""></a>
+                            <a href="#" target="_blank"><img src="./assets/img/footer/twitter.png" alt=""></a>
+                            <a href="#" target="_blank"><img src="./assets/img/footer/instagram.png" alt=""></a>
+                            <a href="#" target="_blank"><img src="./assets/img/footer/pinterest.png" alt=""></a>
+                            <a href="#" target="_blank"><img src="./assets/img/footer/google plus.png" alt=""></a>
+                            <a href="#" target="_blank"><img src="./assets/img/footer/youtube.png" alt=""></a>
+                            <a href="#" target="_blank"><img src="./assets/img/footer/dribbble.png" alt=""></a>
+                            <a href="#" target="_blank"><img src="./assets/img/footer/tumblr.png" alt=""></a>
+                        </div>
+                        <form action="" class="follow__form">
+                            <input type="email" name="email" class="follow__input" placeholder="Your Email...">
+                            <button type="button" class="follow__button">Subscribe</button>
+                        </form>
+                    </div><!-- /Follow -->
+                </div><!-- /Mogo -->
+                <div class="blogs">
+                    <div class="blogs__title">Blogs</div>
+                    <div class="blogs__item">
+                        <a href="#">
+                            <img src="./assets/img/footer/blog_1.jpg" alt="" class="blogs__img">
+                        </a>
+                        <div class="blogs__name">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                        </div>
+                        <div class="blogs__date">Jan 9, 2016</div>
+                    </div>
+                    <div class="blogs__item">
+                        <a href="">
+                            <img src="./assets/img/footer/blog_2.jpg" alt="" class="blogs__img">
+                        </a>
+                        <div class="blogs__name">
+                            Consectetur adipiscing elit, sed do eiusmod tempor
+                        </div>
+                        <div class="blogs__date">Jan 9, 2016</div>
+                    </div> 
+                    <div class="blogs__item">
+                        <a href="">
+                            <img src="./assets/img/footer/blog_3.jpg" alt="" class="blogs__img">
+                        </a>
+                        <div class="blogs__name">
+                            sed do eiusmod tempor incididunt ut labore
+                        </div>
+                        <div class="blogs__date">Jan 9, 2016</div>
+                    </div>                                       
+                </div><!-- /Blogs -->
+                <div class="instagram">
+                    <div class="instagram__title">Instagram</div>
+                    <div class="instagram__inner">
+                        <a href="#"><img src="./assets/img/footer/1.jpg" alt=""></a>
+                        <a href=""><img src="./assets/img/footer/2.jpg" alt=""></a>
+                        <a href=""><img src="./assets/img/footer/3.jpg" alt=""></a>
+                        <a href=""><img src="./assets/img/footer/4.jpg" alt=""></a>
+                        <a href=""><img src="./assets/img/footer/5.jpg" alt=""></a>
+                        <a href=""><img src="./assets/img/footer/6.jpg" alt=""></a>
+                        <a href=""><img src="./assets/img/footer/7.jpg" alt=""></a>
+                        <a href=""><img src="./assets/img/footer/8.jpg" alt=""></a>
+                        <a href=""><img src="./assets/img/footer/9.jpg" alt=""></a>
+                    </div>
+                    <a href="" class="instagram__link">View more photos</a>
+                </div><!-- /instagram -->
+            </div><!-- /Footer -->
+            <div class="copyright">© 2016 MoGo free PSD template by <span>&nbsp;Laaqiq</span></div>
+        </div><!-- /Container -->
+    </footer>
 </body>
 </html>
