по работал над адаптивностью

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <section class="intro">
         <div class="container">
             <div class="intro__inner">
-                <h2 class="intro__suptitle">Creative Template</h2>
+                <div class="intro__suptitle">Creative Template</div>
                 <h1 class="intro__title">Welcome to MoGo</h1>
                 <button class="intro__button">Learn more</button>
             </div>
@@ -153,10 +153,22 @@
         <div class="slider">
             <div class="container">
                 <div class="slider__inner">
-                    <div class="slider__item"><span>01</span> Intro</div>
-                    <div class="slider__item"><span>02</span> Work</div>
-                    <div class="slider__item"><span>03</span> About</div>
-                    <div class="slider__item"><span>04</span> Contact</div>
+                    <div class="slider__item">
+                        <span class="slider__num">01</span>
+                        <span class="slider__text">Intro</span>
+                    </div>
+                    <div class="slider__item">
+                        <span class="slider__num">02</span>
+                        <span class="slider__text">Work</span>
+                    </div>
+                    <div class="slider__item">
+                        <span class="slider__num">03</span>
+                        <span class="slider__text">About</span>
+                    </div>
+                    <div class="slider__item">
+                        <span class="slider__num">04</span>
+                        <span class="slider__text">Contact</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -228,8 +240,8 @@
                 <h2 class="section__suptitle">We work with</h2>
                 <h1 class="section__title">Amazing Services</h1>                
             </div>
-            <div class="services services--line">
-                <div class="services__item">
+            <div class="services">
+                <div class="services__item services__item--line">
                     <img src="./assets/img/service/1.png" alt="" class="services__icon">
                     <h3 class="services__title">Photography</h3>
                     <p class="services__text">
@@ -237,7 +249,7 @@
                         adipiscing elit, sed do eiusmod tempor.
                     </p>
                 </div>
-                <div class="services__item">
+                <div class="services__item services__item--line">
                     <img src="./assets/img/service/2.png" alt="" class="services__icon">
                     <h3 class="services__title">Web Design</h3>
                     <p class="services__text">
@@ -245,16 +257,14 @@
                         sed do eiusmod tempor.
                     </p>
                 </div>
-                <div class="services__item">
+                <div class="services__item services__item--line">
                     <img src="./assets/img/service/3.png" alt="" class="services__icon">
                     <h3 class="services__title">Creativity</h3>
                     <p class="services__text">
                         Dolor sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.
                     </p>
-                </div>                                
-            </div>
-            <div class="services">
+                </div> 
                 <div class="services__item">
                     <img src="./assets/img/service/4.png" alt="" class="services__icon">
                     <h3 class="services__title">Seo</h3>
@@ -278,8 +288,8 @@
                         Dolor sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.
                     </p>
-                </div>                                
-            </div>            
+                </div>                                                
+            </div>          
         </div><!-- /container -->
     </section>
     <section class="section section--devices">
@@ -289,7 +299,7 @@
                 <h1 class="section__title">Unique design</h1>                
             </div>
             <div class="devices">
-                <img src="./assets/img/feature/ipad.png" alt="" class="devices__item">
+                <img src="./assets/img/feature/ipad.png" alt="" class="devices__item devices__item--ipad">
                 <img src="./assets/img/feature/iphone.png" alt="" class="devices__item devices__item--iphone">
             </div>
         </div>
